# Boogie

./: README.md  loikujhfv  post.md
barcode/: barcode_jetson.py
src/BarcodeScanning/: test_barcode.py
src/BoxDetecion_and_SizeMeasuring/: BoxDetecion_and_SizeMeasuring.py  BoxDetection_and_SizeMeasuring_Jetson.py  BoxDetection_for_Rpi.cpp
src/Code_Merge/: BoxDetection_SizeMeasuring_BarcodeScanning.py  MergeAll.py  smart_logi_system_jetson.py  smart_logi_system_jetson_rev.py
src/ForChecking/turtlebot3_manipulation_gui/: package.xml
src/ForChecking/turtlebot3_manipulation_gui/include/turtlebot3_manipulation_gui/: main_window.hpp  qnode.hpp
src/ForChecking/turtlebot3_manipulation_gui/src/: main.cpp  main_ori.cpp  main_window.cpp  qnode.cpp
src/LoadingBox_and_TruckVisualization/: LoadingBox.py  LoadingBox_and_TruckVisualization.py  visualization_opengl.py
src/barcode_cpp/: barcode_image.cpp  barcode_video.cpp
src/contour2segmentation/: seg+grabcut  smart_logi_system_jetson_rev0.py  smart_logi_system_jetson_rev0_origin.py  smart_logi_system_jetson_rev1_contour.py  smart_logi_system_jetson_rev2.py  smart_logi_system_jetson_rev2_corner.py  smart_logi_system_jetson_rev3.py  smart_logi_system_jetson_rev4_corner2.py  smart_logi_system_jetson_rev_weight.py
src/python_rosserial/: CMakeLists.txt  package.xml
src/ros_com/: listener.py  ros_tutorial_msg_publisher.cpp  ros_tutorial_msg_subscriber.cpp
src/turtlebot3_manipulation_gui_keyboard/: CMakeLists.txt  package.xml
yolo_detecting/: img_crop.py  read_me.md
yolo_detecting/darknet/: Makefile
(+10 files in other folders)
